--- a/Backend/templates/index.html
+++ b/Backend/templates/index.html
@@ -1,35 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
   <script src="https://cesium.com/downloads/cesiumjs/releases/1.107.1/Build/Cesium/Cesium.js"></script>
   <link href="https://cesium.com/downloads/cesiumjs/releases/1.107.1/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <script src="{{ url_for('static', filename='DrawCircle.js') }}"></script>
-
-  <style type="text/css">
-    container { margin: 0 auto; min-height: 100%;}
+  <style>
+    #cesiumContainer { width: 100vw; height: 100vh; margin: 0; padding: 0; }
+    body { margin: 0; padding: 0; }
   </style>
 </head>
-
 <body>
-  <div id="cesiumContainer" class="fullSize"></div>
-  
-  <script type="module">
-    Cesium.Ion.defaultAccessToken = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiI1NTk3MTdjMC04MWY1LTQ3NTgtODBmMy0wYzQxODIxOWM4MmEiLCJpZCI6MzAyODk1LCJpYXQiOjE3NDczNTE0ODh9.qDVAj9TITsiv55IY2VaLDE9Y1HcMBZk__0QCrfJdhH0';
-
-  const viewer = new Cesium.Viewer("cesiumContainer", {
-    timeline: false,
-    animation: false,
-    sceneModePicker: true,
-    baseLayerPicker: true,
-    shadows: false,
-    infoBox: false,
-    selectionIndicator: false,
-    
-  });
-  </script>
+  <div id="cesiumContainer"></div>
+<!-- Must delay JS script link, as it must attatch to div above -->
+  <script src="{{ url_for('static', filename='DrawCircle.js') }}"></script>
 </body>
 </html>
